--- a/res/menu.fxml
+++ b/res/menu.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.Font?>
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.121" fx:controller="MenuController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.121" fx:controller="controllers.MenuController">
     <VBox spacing = "10" id = "gameControl" alignment="CENTER"
           GridPane.rowIndex = "0">
         <Text fx:id="title" text = "Reversi" GridPane.rowIndex="1" />
