--- a/res/settings.fxml
+++ b/res/settings.fxml
@@ -13,12 +13,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane fx:id="pane" alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SettingsController">
+<GridPane fx:id="pane" alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SettingsController">
     <Text fx:id="title" text="Settings" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="0">
       <font>
          <Font size="18.0" />
       </font></Text>
-    <Label fx:id="size" text="Board Size:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+    <Label fx:id="size" text="game.Board Size:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
     <Label fx:id="color1" text="First Player's Disk Color:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
     <Label fx:id="color2" text="Second Player's Disk Color:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
     <Label fx:id="message" GridPane.rowIndex="5" GridPane.columnIndex="0" />
